# Common-Password-Detector

./: Example.py  README.md  pyproject.toml
.github/workflows/: workflow.yml  workflows.yml
CommonPassword/commonpasswords/: pyproject.toml
Examples/: example.py
base-commonpassword/: pyproject.toml
commonpasswords/: pyproject.toml
commonpasswords/src/commonpasswords/: __init__.py  commonwords.txt
src/commonpasswords/: __init__.py  commonwords.txt
tests/: test___init__.py  test_commonpasswords.py
